[tool.poetry]
name = "repl-nix-my-new-python-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_my_new_python_project"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
django = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
